Bug 1743273: Ensure gfxDWriteFont::sForceGDIClassicEnabled is set on initialization. r=lsalzman, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D135528